--- a/KerasHorovod.ipynb
+++ b/KerasHorovod.ipynb
@@ -35,7 +35,7 @@
     "args['batch-size'] = 100\n",
     "args['epochs'] = 10\n",
     "args[\"num-proc\"] = 4\n",
-    "args['data-file'] = \"/train_data/auto-mpg.data\"\n",
+    "args['data-file'] = \"/opt/train_data/auto-mpg.data\"\n",
     "\n",
     "# Create Spark session for data preparation.\n",
     "conf = SparkConf().setAppName('Keras linear model example').set('spark.sql.shuffle.partitions', '16')\n",
